gitops/apps/cv/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
  namespace: apps
spec:
  selector:
    app: cv
  ports:
    - name: http
      port: 8080
      targetPort: http
