gitops/apps/cv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: omerlevy03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv
                port:
                  number: 8080
    - host: www.omerlevy03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv
                port:
                  number: 8080
